# astraszab-hypermodern-python

./: .flake8  .gitignore  .python-version  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  reference.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt
src/astraszab_hypermodern_python/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
