[tool.poetry]
name = "astraszab-hypermodern-python"
version = "0.1.0"
description = ""
authors = ["astraszab <u.astraszab@gmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astraszab/astraszab-hypermodern-python"
repository = "https://github.com/astraszab/astraszab-hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
