[tool.poetry]
name = "astraszab-hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["astraszab <u.astraszab@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astraszab/astraszab-hypermodern-python"
repository = "https://github.com/astraszab/astraszab-hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypermodern-python = "astraszab_hypermodern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
